Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'X-Master-Key': '$2a$10$1g9Z7q5X2a8uY0JwT3zXYe' // Chave pública de teste
+                        'X-Master-Key': '$2a$10$vNtTyfSRMjguz0s358jAQO9YfDOXQ8cZhWQyKsgv.v2lo5.IAePhy' // Chave pública de teste
                     },
                     body: JSON.stringify(data)
                 });
