--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <!-- Aviso Acadêmico -->
         <div class="bg-yellow-100 border-l-4 border-yellow-500 p-4 mb-6">
             <p class="font-bold">AVISO:</p>
-            <p>Este é um projeto acadêmico temporário. Dados são simulados e não armazenados permanentemente.</p>
+            <p class="mb-2">*Termos e Condições: Esta promoção é válida apenas para primeira recarga de novos usuários.</p>
+            <p>A promoção é válida exclusivamente para usuários brasileiros e/ou com número de telefone nacional (+55).</p>
+            <p class="mt-4">Ao realizar a recarga, você concorda com nossos Termos de Serviço e Política de Privacidade.</p>
         </div>
 
         <!-- Formulário (mesmo layout que você tinha) -->
